Begin refactoring env vars

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -39,6 +39,11 @@ Parameters:
   S3SigningAccessKeyId: { Type: String }
   DeploymentPackageBucketName: { Type: String }
   S3StaticSiteDeployServiceToken: { Type: String }
+  CastleHostname: { Type: String }
+  CmsHostname: { Type: String }
+  IdHostname: { Type: String }
+  MetricsHostname: { Type: String }
+  PlayHostname: { Type: String }
 
   AuguryEcrImageTag: { Type: String }
   AugurySecretsVersion: { Type: String }
