--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -23,6 +23,8 @@ Parameters:
   VpcPublicSubnet3Id: { Type: "AWS::EC2::Subnet::Id" }
   EchoServiceToken: { Type: String }
   SharedEcsAsgInstanceSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
+  CastleHostname: { Type: String }
+  IdHostname: { Type: String }
 
   DovetailRouterEcrImageTag: { Type: String }
   DovetailRouterSecretsVersion: { Type: String }
@@ -132,6 +134,8 @@ Resources:
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
+        CastleHostname: !Ref CastleHostname
+        IdHostname: !Ref IdHostname
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
