--- a/stacks/apps/metrics.yml
+++ b/stacks/apps/metrics.yml
@@ -28,6 +28,8 @@ Parameters:
   AlbListenerRulePriorityPrefix: { Type: String }
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
+  CastleHostname: { Type: String }
+  IdHostname: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -188,6 +190,10 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
+            - Name: AUTH_HOST # TODO Remove from secrets
+              Value: !Ref IdHostname
+            - Name: CASTLE_HOST # TODO Remove from secrets
+              Value: !Ref CastleHostname
           Essential: true
           Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/metrics.prx.org:${EcrImageTag}
           LogConfiguration:
