--- a/stacks/apps/play.yml
+++ b/stacks/apps/play.yml
@@ -203,6 +203,8 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
+            - Name: LOGO_NAME # Remove from secrets
+              Value: prx
           Essential: true
           Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/play.prx.org:${EcrImageTag}
           LogConfiguration:
