Fix missing parameters

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -315,6 +315,12 @@ Resources:
         S3SigningUserName: !Ref S3SigningUserName
         S3SigningEndpointUrl: !Ref S3SigningEndpointUrl
         S3SigningAccessKeyId: !Ref S3SigningAccessKeyId
+        CastleHostname: !Ref CastleHostname
+        CmsHostname: !Ref CmsHostname
+        IdHostname: !Ref IdHostname
+        MetricsHostname: !Ref MetricsHostname
+        PlayHostname: !Ref PlayHostname
+
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
