Add hostname constants

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -220,10 +220,12 @@ Resources:
           - https://${SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}
           - SourceBucketName:
               Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureSourceBucket
+      AuguryHostname: !If [IsProduction, augury.prx.org, augury.staging.prx.tech]
       BetaHostname: !If [IsProduction, beta.prx.org, beta.staging.prx.tech]
       CastleHostname: !If [IsProduction, castle.prx.tech, castle.staging.prx.tech]
       CmsHostname: !If [IsProduction, cms.prx.org, cms.staging.prx.tech]
       FeederHostname: !If [IsProduction, feeder.prx.org, feeder.staging.prx.tech]
+      GroveHostname: !If [IsProduction, grove.prx.org, grove.staging.prx.tech]
       IdHostname: !If [IsProduction, id.prx.org, id.staging.prx.tech]
       MetricsHostname: !If [IsProduction, metrics.prx.org, metrics.staging.prx.tech]
       PlayHostname: !If [IsProduction, play.prx.org, play.staging.prx.tech]
