--- a/stacks/apps/id.yml
+++ b/stacks/apps/id.yml
@@ -30,9 +30,13 @@ Parameters:
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
   AmazonSesSmtpCredentialsGeneratorServiceToken: { Type: String }
+  SharedRdsMysqlEndpoint: { Type: String }
+  SharedAuroraMysqlEndpoint: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
+  HasRdsEndpoint: !Not [!Equals [!Ref SharedRdsMysqlEndpoint, ""]]
+  HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraMysqlEndpoint, ""]]
 
 Resources:
   HostHeaderListenerRule:
@@ -102,6 +106,7 @@ Resources:
 
   EcsService:
     Type: AWS::ECS::Service
+    Condition: HasRdsEndpoint
     Properties:
       Cluster: !Ref EcsClusterArn
       DeploymentConfiguration:
