--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1045,6 +1045,10 @@ Resources:
         IdHostname: !GetAtt Constants.IdHostname
         MetricsHostname: !GetAtt Constants.MetricsHostname
         PlayHostname: !GetAtt Constants.PlayHostname
+        SharedRdsMysqlEndpoint: !Ref SharedRdsMysqlEndpoint
+        SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
+        SharedRdsPostgresqlEndpoint: !Ref SharedRdsPostgresqlEndpoint
+        SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
 
         # App-specific parameters
 
