Make Castle service conditional on database

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -59,6 +59,7 @@ Parameters:
   CastleEcrImageTag: { Type: String }
   CastleSecretsVersion: { Type: String }
   CastleSharedAlbListenerRulePriorityPrefix: { Type: String }
+  CastleRdsPostgresqlEndpoint: { Type: String }
 
   ExchangeEcrImageTag: { Type: String }
   ExchangeSecretsVersion: { Type: String }
@@ -168,6 +169,7 @@ Resources:
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         SharedEcsAsgInstanceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
+        CastleRdsPostgresqlEndpoint: !Ref CastleRdsPostgresqlEndpoint
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
