--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -22,6 +22,7 @@ Parameters:
   SharedAuroraMysqlEndpoint: { Type: String, Default: "" }
   SharedRdsPostgresqlEndpoint: { Type: String, Default: "" }
   SharedAuroraPostgresqlEndpoint: { Type: String, Default: "" }
+  CastleRdsPostgresqlEndpoint: { Type: String, Default: "" }
   # Required
   AwsOrganizationId: { Type: String }
   AsgKeyPairName:
@@ -1062,6 +1063,7 @@ Resources:
         CastleEcrImageTag: !Ref CastleEcrImageTag
         CastleSecretsVersion: !Ref CastleSecretsVersion
         CastleSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Castle, prefix]
+        CastleRdsPostgresqlEndpoint: !Ref CastleRdsPostgresqlEndpoint
 
         ExchangeEcrImageTag: !Ref ExchangeEcrImageTag
         ExchangeSecretsVersion: !Ref ExchangeSecretsVersion
