--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -1,7 +1,11 @@
 # stacks/provisioned/metrics.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: metrics.prx.org application running in Docker # TODO
+Description: >-
+  Creates an ECS service for the public Exchange web server, along with target
+  group and listener rule for the shared ALB. Also creates an IAM user and
+  SES credentials for it. Also creates ECS services for SayWhen and the
+  Exchange workers.
 
 Parameters:
   kWebContainerName:
