--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -1,9 +1,9 @@
 # stacks/provisioned/metrics.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: >- # TODO
-  Creates an ECS service for Metrics, along with target group and listener rule
-  for the shared ALB.
+Description: >-
+  Creates a dedicated load balancer and the ECS service for the public Feeder
+  web server. Also creates an ECS service for the Feeder workers.
 
 Mappings:
   ElbService:
