--- a/stacks/apps/play.yml
+++ b/stacks/apps/play.yml
@@ -231,6 +231,7 @@ Resources:
         - { Key: prx:dev:application, Value: Play }
       TaskRoleArn: !GetAtt TaskRole.Arn
 
+  # TODO Maybe ditch this
   ProxyTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     DependsOn:
