--- a/stacks/apps/radiotopia-tower.yml
+++ b/stacks/apps/radiotopia-tower.yml
@@ -2,7 +2,8 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 
-Description: Radiotopia Radio API
+Description: >-
+  Creates an API Gateway and Lambda function for the Radiotopia Radio API
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
