--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -6,12 +6,15 @@ Description: Provides services to be used as CloudFormation custom resources
 Parameters:
   EnvironmentType: { Type: String }
   StorageStackName: { Type: String }
+  RootStackName: { Type: String }
+  RootStackId: { Type: String }
 
 Resources:
   AmazonSesSmtpCredentialsGeneratorFunction:
     Type: AWS::Serverless::Function
     Properties:
-      Description: tktktk
+      Description: >-
+        Generates SES SMTP credentials for a given IAM access key and secret
       Handler: index.lambda_handler
       InlineCode: |
         import cfnresponse
@@ -55,6 +58,8 @@ Resources:
         prx:meta:tagging-version: "2021-04-07"
         prx:cloudformation:stack-name: !Ref AWS::StackName
         prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:cloudformation:root-stack-name: !Ref RootStackName
+        prx:cloudformation:root-stack-id: !Ref RootStackId
         prx:ops:environment: !Ref EnvironmentType
         prx:dev:application: Infrastructure
       Timeout: 4
@@ -155,6 +160,8 @@ Resources:
         prx:meta:tagging-version: "2021-04-07"
         prx:cloudformation:stack-name: !Ref AWS::StackName
         prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:cloudformation:root-stack-name: !Ref RootStackName
+        prx:cloudformation:root-stack-id: !Ref RootStackId
         prx:ops:environment: !Ref EnvironmentType
         prx:dev:application: Infrastructure
       Timeout: 60
@@ -223,6 +230,8 @@ Resources:
         prx:meta:tagging-version: "2021-04-07"
         prx:cloudformation:stack-name: !Ref AWS::StackName
         prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:cloudformation:root-stack-name: !Ref RootStackName
+        prx:cloudformation:root-stack-id: !Ref RootStackId
         prx:ops:environment: !Ref EnvironmentType
         prx:dev:application: Infrastructure
       Timeout: 60
@@ -264,6 +273,8 @@ Resources:
         prx:meta:tagging-version: "2021-04-07"
         prx:cloudformation:stack-name: !Ref AWS::StackName
         prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:cloudformation:root-stack-name: !Ref RootStackName
+        prx:cloudformation:root-stack-id: !Ref RootStackId
         prx:ops:environment: !Ref EnvironmentType
         prx:dev:application: Infrastructure
       Timeout: 4
