--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -1,7 +1,10 @@
 # stacks/provisioned/metrics.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: metrics.prx.org application running in Docker # TODO
+Description: >-
+  Creates an ECS service for the public CMS web server, along with target
+  group and listener rule for the shared ALB. Also creates an ECS service for
+  the CMS workers, as well as an Elasticsearch domain used by CMS.
 
 Parameters:
   kWebContainerName:
