Fix missing params

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -181,6 +181,8 @@ Resources:
       Parameters:
         StorageStackName: !Ref InfrastructureStorageStackName
         EnvironmentType: !Ref EnvironmentType
+        RootStackName: !Ref AWS::StackName
+        RootStackId: !Ref AWS::StackId
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
