Add rudimentary shared PG Aurora template

--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -249,8 +249,8 @@ Resources:
       VpcId: !Ref VpcId
       GroupDescription: !Sub Castle ${EnvironmentType} Redis security group
       SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 6379
+        - FromPort: 6379
+          IpProtocol: tcp
           SourceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
           ToPort: 6379
       Tags:
