--- a/dns/radiotopia.com-hosted_zone.yml
+++ b/dns/radiotopia.com-hosted_zone.yml
@@ -29,30 +29,30 @@ Resources:
       Comment: WWW
       HostedZoneId: !Ref HostedZone
       RecordSets:
-        - Type: A
+        - AliasTarget:
+            DNSName: d2f1uy6b6p179x.cloudfront.net
+            # Global CloudFront hosted zone ID
+            HostedZoneId: Z2FDTNDATAQYW2
           Name: !Ref Domain
-          AliasTarget:
+          Type: A
+        - AliasTarget:
             DNSName: d2f1uy6b6p179x.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
-        - Type: AAAA
           Name: !Ref Domain
-          AliasTarget:
+          Type: AAAA
+        - AliasTarget:
             DNSName: d2f1uy6b6p179x.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
-        - Type: A
           Name: !Sub www.${Domain}
-          AliasTarget:
+          Type: A
+        - AliasTarget:
             DNSName: d2f1uy6b6p179x.cloudfront.net
             # Global CloudFront hosted zone ID
             HostedZoneId: Z2FDTNDATAQYW2
-        - Type: AAAA
           Name: !Sub www.${Domain}
-          AliasTarget:
-            DNSName: d2f1uy6b6p179x.cloudfront.net
-            # Global CloudFront hosted zone ID
-            HostedZoneId: Z2FDTNDATAQYW2
+          Type: AAAA
   Text:
     Type: AWS::Route53::RecordSetGroup
     Properties:
@@ -64,18 +64,19 @@ Resources:
       Comment: TXT Records
       HostedZoneId: !Ref HostedZone
       RecordSets:
-        - ResourceRecords:
+        - Name: !Ref Domain
+          ResourceRecords:
             - '"google-site-verification=H6g01JYxody2U98gTwUZVFY1kDz1miktW9DIEDh_f1I"'
           TTL: "300"
           Type: TXT
-          Name: !Ref Domain
   GSuite:
     Type: AWS::Route53::RecordSetGroup
     Properties:
       Comment: G Suite
       HostedZoneId: !Ref HostedZone
       RecordSets:
-        - ResourceRecords:
+        - Name: !Ref Domain
+          ResourceRecords:
             - 1 ASPMX.L.GOOGLE.COM.
             - 5 ALT1.ASPMX.L.GOOGLE.COM.
             - 5 ALT2.ASPMX.L.GOOGLE.COM.
@@ -83,7 +84,6 @@ Resources:
             - 10 ASPMX3.GOOGLEMAIL.COM.
           TTL: "300"
           Type: MX
-          Name: !Ref Domain
   AwsAcmLegacyUsEast1:
     Type: AWS::Route53::RecordSetGroup
     Properties:
