--- a/devops/chat-ops/slack-app/template.yml
+++ b/devops/chat-ops/slack-app/template.yml
@@ -52,27 +52,24 @@ Resources:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
-        Version: "2012-10-17"
         Statement:
-          - Effect: Allow
+          - Action: sts:AssumeRole
+            Effect: Allow
             Principal:
-              Service:
-                - lambda.amazonaws.com
-            Action:
-              - sts:AssumeRole
+              Service: lambda.amazonaws.com
+        Version: "2012-10-17"
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
       Policies:
         - PolicyName: StsPolicy
           PolicyDocument:
-            Version: "2012-10-17"
             Statement:
-              - Effect: Allow
-                Action:
-                  - "sts:AssumeRole"
+              - Action: sts:AssumeRole
+                Effect: Allow
                 Resource:
                   - arn:aws:iam::*:role/*Oganization-CrossAccountSharingRole
                   - !Sub arn:aws:iam::*:role/*${DevOpsCrossAccountAccessRoleName}
+            Version: "2012-10-17"
       Tags:
         - Key: Project
           Value: DevOps
@@ -117,8 +114,8 @@ Resources:
       Runtime: nodejs14.x
       Tags:
         Project: DevOps
-        "prx:cloudformation:stack-name": !Ref AWS::StackName
-        "prx:cloudformation:stack-id": !Ref AWS::StackId
+        prx:cloudformation:stack-name: !Ref AWS::StackName
+        prx:cloudformation:stack-id: !Ref AWS::StackId
       Timeout: 8
   AppFunctionLogGroup:
     Type: AWS::Logs::LogGroup
